# media_fw

./: CMakeLists.txt  README.md
data/: config.json  db.json
docs/html/: Client_8h_source.html  Connector_8h_source.html  DatabaseItem_8h_source.html  JsonParser_8h_source.html  Logger_8h_source.html  Request_8h_source.html  StatusLogger_8h_source.html  Subject_8h_source.html  annotated.html  classCli-members.html  classCliTest-members.html  classCliTest.html  classCliTest__inherit__graph.md5  classCli__coll__graph.map  classCli__inherit__graph.map  (+89 more)
inc/: Connection.h  HttpConnector.h  JsonParser.h  MediaHandler.h  Metadata.h  Request.h  SshConnector.h  StatusLogger.h  Util.h
mediaFW/: .gitignore  CMakeLists.txt  Cli.cpp  Cli.h  Connection.cpp  Connection.h  Database.h  DatabaseItem.h  main.cpp
mediaFW/contrib/googletest/: CMakeLists.txt
mediaFW/data/: config.json  db.json
mediaFW/docs/: doxy.config
mediaFW/docs/html/: Cli_8h_source.html  Client_8h_source.html  CommandLineParser_8h_source.html  ConnectionStream_8h_source.html  Connection_8h_source.html  DatabaseItem_8h_source.html  Database_8h_source.html  JsonParser_8h_source.html  MediaHandler_8h_source.html  MovieDatabase_8h_source.html  Observer_8h_source.html  Parser_8h_source.html  SeriesDatabase_8h_source.html  SshConnector_8h_source.html  TestClass_8h_source.html  Test__Cli_8h_source.html  Test__Database_8h_source.html  Test__Json_8h_source.html  Test__Logger_8h_source.html  Test__Observer_8h_source.html  Util_8h_source.html  annotated.html  classCli-members.html  classCli.html  classCliTest__coll__graph.map  classCliTest__coll__graph.md5  classCliTest__inherit__graph.map  classCli__coll__graph.md5  classCli__inherit__graph.map  classCli__inherit__graph.md5  classCli_a8251d6c89698aaf128318fc3ad4b2906_icgraph.md5  classCli_aa2b3675ef3e3bb01ed0d1997460a0e28_cgraph.map  classCli_aa2b3675ef3e3bb01ed0d1997460a0e28_cgraph.md5  classCli_aa2b3675ef3e3bb01ed0d1997460a0e28_icgraph.md5  classClient-members.html  classClient.html  classClient__coll__graph.map  classClient__coll__graph.md5  classClient_a2fb08fe51afa68997faa22474e114771_icgraph.md5  classClient_a39187196db33ecd252c342fffa7039ef_cgraph.md5  (+881 more)
mediaFW/docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_11.js  functions_14.js  functions_2.js  (+16 more)
mediaFW/docs/latex/: annotated.tex  classCli.tex  classCliTest__coll__graph.md5  classCliTest__inherit__graph.md5  classCli__coll__graph.md5  classCli__inherit__graph.md5  classCli_a4ee41556f8c3a736d813f0d937413da0_cgraph.md5  classCli_a8251d6c89698aaf128318fc3ad4b2906_icgraph.md5  classCli_aa2b3675ef3e3bb01ed0d1997460a0e28_icgraph.md5  classCli_af29a5d8a0c3863f69c0e21133dee2d1b_icgraph.md5  classClient.tex  classClient__coll__graph.md5  classClient_a2fb08fe51afa68997faa22474e114771_icgraph.md5  classClient_a8030bdb7d7857907110ad45883b01511_cgraph.md5  classCommandLineParser.tex  classConnection.tex  classConnection__coll__graph.md5  classDatabase.tex  classDatabaseItem.tex  classDatabaseItem__coll__graph.md5  classDatabase__coll__graph.md5  classDatabase__inherit__graph.md5  classJsonParser.tex  classJsonParser__coll__graph.md5  classJsonParser__inherit__graph.md5  classJsonTest.tex  classJsonTest__coll__graph.md5  classJsonTest__inherit__graph.md5  classJson_1_1CharReader.tex  classJson_1_1CharReaderBuilder.tex  classJson_1_1CharReaderBuilder__coll__graph.md5  classJson_1_1CharReaderBuilder__inherit__graph.md5  classJson_1_1CharReader_1_1Factory.tex  classJson_1_1CharReader_1_1Factory__inherit__graph.md5  classJson_1_1CharReader__inherit__graph.md5  classJson_1_1Exception.tex  classJson_1_1Exception__coll__graph.md5  classJson_1_1Exception__inherit__graph.md5  classJson_1_1Features.tex  classJson_1_1LogicError.tex  (+395 more)
mediaFW/docs/man/man3/: Cli.3  Client.3  Connection.3  ConnectionStream.3  Connector.3  Database.3  DatabaseItem.3  Json.3  JsonParser.3  Json_BuiltStyledStreamWriter.3  Json_CharReader.3  Json_CharReaderBuilder.3  Json_CharReader_Factory.3  Json_CommentStyle.3  Json_Exception.3  Json_Features.3  Json_LogicError.3  Json_OurCharReader.3  Json_OurFeatures.3  Json_OurReader.3  Json_OurReader_ErrorInfo.3  Json_OurReader_StructuredError.3  Json_OurReader_Token.3  Json_Path.3  Json_PathArgument.3  Json_Reader.3  Json_Reader_ErrorInfo.3  Json_Reader_StructuredError.3  Json_Reader_Token.3  Json_RuntimeError.3  Json_StaticString.3  Json_StreamWriter.3  Json_StreamWriterBuilder.3  Json_StreamWriter_Factory.3  Json_Value.3  Json_ValueConstIterator.3  Json_ValueIterator.3  Json_ValueIteratorBase.3  Json_Value_CZString.3  Json_Value_CZString_StringStorage.3  (+250 more)
mediaFW/inc/: Cli.h  Client.h  Connection.h  ConnectionStream.h  Database.h  DatabaseItem.h  HttpConnector.h  InputParser.h  JsonParser.h  JsonUtils.h  MediaFW.h  MediaHandler.h  Metadata.h  MovieDatabase.h  Request.h  SshConnector.h  StatusLogger.h  Util.h
mediaFW/inc/Database/: Database.h  DatabaseItem.h  MovieDatabase.h  Test_Database.h
mediaFW/inc/database/: Database.h  DatabaseItem.h  MovieDatabase.h  SeriesDatabase.h
mediaFW/inc/ifc/: CommandLineParser.h  Connector.h  Logger.h  Observer.h  Parser.h  Subject.h
mediaFW/inc/unittests/: Gmocker.h  Test_Cli.h  Test_Database.h  Test_HttpConnector.h  Test_Json.h  Test_Observer.h  Test_Request.h
mediaFW/src/: Cli.cpp  Client.cpp  Connection.cpp  HttpConnector.cpp  JsonParser.cpp  MediaHandler.cpp  MovieDatabase.cpp  SshConnector.cpp  main.cpp
mediaFW/src/unittests/: Test_Cli.h
mediaFW/test/: Fixtures.h  Mocks.h  TestClass.h  Test_Startup.h  fixtures.h  mocks.h  test_main.cpp
src/: Cli.cpp  Client.cpp  MediaHandler.cpp
test/: Mocks.h  Test_Startup.h  test_main.cpp
(+77 files in other folders)
